Remove compiler arg